--- a/MillersLawnService/MillersLawnService.csproj
+++ b/MillersLawnService/MillersLawnService.csproj
@@ -33,8 +33,17 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.dll</HintPath>
+    </Reference>
+    <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.SqlServer.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.Security" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -46,6 +55,15 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Customer.cs">
+      <DependentUpon>LawnServiceDb.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Employee.cs">
+      <DependentUpon>LawnServiceDb.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Equipment.cs">
+      <DependentUpon>LawnServiceDb.tt</DependentUpon>
+    </Compile>
     <Compile Include="Forms\CustomersForms\AddCustomerForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -197,8 +215,47 @@
     <Compile Include="Forms\VendorsForms\VendorsListForm.Designer.cs">
       <DependentUpon>VendorsListForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Invoice.cs">
+      <DependentUpon>LawnServiceDb.tt</DependentUpon>
+    </Compile>
+    <Compile Include="InvoiceLineItem.cs">
+      <DependentUpon>LawnServiceDb.tt</DependentUpon>
+    </Compile>
+    <Compile Include="LawnServiceDb.Context.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>LawnServiceDb.Context.tt</DependentUpon>
+    </Compile>
+    <Compile Include="LawnServiceDb.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>LawnServiceDb.tt</DependentUpon>
+    </Compile>
+    <Compile Include="LawnServiceDb.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>LawnServiceDb.edmx</DependentUpon>
+    </Compile>
+    <Compile Include="POLineItem.cs">
+      <DependentUpon>LawnServiceDb.tt</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="PurchaseOrder.cs">
+      <DependentUpon>LawnServiceDb.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Service.cs">
+      <DependentUpon>LawnServiceDb.tt</DependentUpon>
+    </Compile>
+    <Compile Include="State.cs">
+      <DependentUpon>LawnServiceDb.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Vendor.cs">
+      <DependentUpon>LawnServiceDb.tt</DependentUpon>
+    </Compile>
+    <EmbeddedResource Include="Forms\CustomersForms\CustomersListForm.resx">
+      <DependentUpon>CustomersListForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Forms\MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
@@ -211,6 +268,16 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EntityDeploy Include="LawnServiceDb.edmx">
+      <Generator>EntityModelCodeGenerator</Generator>
+      <LastGenOutput>LawnServiceDb.Designer.cs</LastGenOutput>
+    </EntityDeploy>
+    <None Include="LawnServiceDb.edmx.diagram">
+      <DependentUpon>LawnServiceDb.edmx</DependentUpon>
+    </None>
+    <None Include="packages.config" />
+    <None Include="Properties\DataSources\Customer.datasource" />
+    <None Include="Properties\DataSources\State.datasource" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -224,6 +291,21 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="LawnServiceDb.Context.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <LastGenOutput>LawnServiceDb.Context.cs</LastGenOutput>
+      <DependentUpon>LawnServiceDb.edmx</DependentUpon>
+    </Content>
+    <Content Include="LawnServiceDb.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>LawnServiceDb.edmx</DependentUpon>
+      <LastGenOutput>LawnServiceDb.cs</LastGenOutput>
+    </Content>
+  </ItemGroup>
+  <ItemGroup>
+    <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
