--- a/MillersLawnService/MillersLawnService.csproj
+++ b/MillersLawnService/MillersLawnService.csproj
@@ -194,12 +194,6 @@
     <Compile Include="Forms\VendorsForms\AddVendorForm.Designer.cs">
       <DependentUpon>AddVendorForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="Forms\VendorsForms\EditVendorForm.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Forms\VendorsForms\EditVendorForm.Designer.cs">
-      <DependentUpon>EditVendorForm.cs</DependentUpon>
-    </Compile>
     <Compile Include="Forms\VendorsForms\VendorsListForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -260,6 +254,12 @@
     <EmbeddedResource Include="Forms\MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Forms\VendorsForms\AddVendorForm.resx">
+      <DependentUpon>AddVendorForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\VendorsForms\VendorsListForm.resx">
+      <DependentUpon>VendorsListForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <SubType>Designer</SubType>
@@ -275,6 +275,7 @@
     <None Include="Properties\DataSources\Customer.datasource" />
     <None Include="Properties\DataSources\Employee.datasource" />
     <None Include="Properties\DataSources\State.datasource" />
+    <None Include="Properties\DataSources\Vendor.datasource" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
