Add Invoice Form done. Need to work on line items next

--- a/MillersLawnService/MillersLawnService.csproj
+++ b/MillersLawnService/MillersLawnService.csproj
@@ -245,6 +245,9 @@
     <EmbeddedResource Include="Forms\EmployeesForms\EmployeesListForm.resx">
       <DependentUpon>EmployeesListForm.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Forms\InvoicesForms\AddInvoiceForm.resx">
+      <DependentUpon>AddInvoiceForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Forms\InvoicesForms\InvoiceListForm.resx">
       <DependentUpon>InvoiceListForm.cs</DependentUpon>
     </EmbeddedResource>
