--- a/MillersLawnService/MillersLawnService.csproj
+++ b/MillersLawnService/MillersLawnService.csproj
@@ -209,9 +209,6 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>LawnServiceDb.edmx</DependentUpon>
     </Compile>
-    <Compile Include="POLineItem.cs">
-      <DependentUpon>LawnServiceDb.tt</DependentUpon>
-    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="PurchaseOrder.cs">
@@ -221,6 +218,9 @@
       <DependentUpon>LawnServiceDb.tt</DependentUpon>
     </Compile>
     <Compile Include="State.cs">
+      <DependentUpon>LawnServiceDb.tt</DependentUpon>
+    </Compile>
+    <Compile Include="tblPurchaseOrdersLineItem.cs">
       <DependentUpon>LawnServiceDb.tt</DependentUpon>
     </Compile>
     <Compile Include="Validators.cs" />
